--- a/FrontEnd/src/app/admin/components/admin-sidebar/admin-sidebar.component.html
+++ b/FrontEnd/src/app/admin/components/admin-sidebar/admin-sidebar.component.html
@@ -44,10 +44,10 @@
 
         <mat-divider></mat-divider>
 
-        <button mat-button class="menu-button"  routerLink="super_admin" *ngIf="_auth.isSuper()">
+        <!-- <button mat-button class="menu-button"  routerLink="super_admin" *ngIf="_auth.isSuper()">
             <mat-icon>person</mat-icon>
             <span>Admin</span>
-        </button>
+        </button> -->
 
         <button mat-button class="menu-button" (click)="logout()">
             <mat-icon>logout</mat-icon>
